[package]
name = "ksed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.35"
colored = "2.1.0"
fastrand = "2.0.1"
rayon = "1.9.0"
rustyline = "14.0.0"
serde =  { version = "1.0.197", features=["derive"] }
serde_json = "1.0.114"
